# newproject_qt

./: CMakeLists.txt
executable/: CMakeLists.txt
